@startuml
'https://plantuml.com/class-diagram


interface AdapterView.OnItemClickListener


MainActivity <|-- AppCompatActivity

StatisticSession <|-- AppCompatActivity

StatisticsActivity <|-- AdapterView.OnItemClickListener
StatisticsActivity <|-- AppCompatActivity

class GraphTools {
+ {static} List<Entry> FrameInfoArrayToListEntry( frameInfoArray : ArrayList<FrameInfo>)
+ {static} List<Entry> BloodAnalysisSessionToListEntry(b : BloodAnalysisSession)
}

class MainActivity {
- mWelcomeMsg : TextView
- mBloodAnalysisMenuButton, mStatisticsMenuButton, mTutorialMenuButton : Button
# onCreate(savedInstanceState : Bundle)
}

class StatisticsActivity {
- mViewKeyList : ListView
- {static} STORAGE_PERMISSION_CODE : final int
- mPreferences : SharedPreferences
- mKeyList : List<String>

- statActivitySetUp() : void
# onResume() : void
+ onCreate(savedInstanceState : Bundle ) : void
+ checkPermission(permission : String, requestCode : int) : void
+ onItemClick(parent : AdapterView<?> , view : View, position : int, id : long) : void
}

class StatisticSession {
- mLineChart : LineChart
- mInfoText : TextView
- mKeyPosition : int
- mKeyList : List<String>
- mDeleteButton : Button
- mPreferences : SharedPreferences

# onCreate(savedInstanceState : Bundle) : void
+ plotMemoryAnalysis() : void
}



@enduml